# matcha

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  bits.cpp  bits.h  cpu_types.h  emu_thread.cpp  filesystem.cpp  filesystem.h  games_list.cpp  games_list.h  int128.h  log.cpp  log.h  log_file.h  memory.h  memory_helpers.h  memory_map.cpp  memory_map.h  queue.h  ring_buffer.h  string.cpp  string.h  types.h  virtual_page_table.h
src/core/: CMakeLists.txt  core.cpp  core.h  elf_loader.cpp  elf_loader.h  gif.cpp  gif.h  scheduler.cpp  scheduler.h  system.cpp  system.h
src/core/ee/: context.cpp  context.h  cop0.cpp  cop0.h  cop1.cpp  cop1.h  cpu_regs.h  decoder.h  disassembler.cpp  disassembler.h  dmac.cpp  dmac.h  ee_core.cpp  ee_core.h  ee_interpreter.cpp  ee_interpreter.h  executor.h  instruction.h  intc.cpp  intc.h  interpreter.cpp  interpreter.h  interpreter_table.cpp  interpreter_table.h  timers.cpp  timers.h
src/core/ee/interpreter/: interpreter.cpp  interpreter.h
src/core/ee/interpreter/instructions/: instruction_cop0.cpp  instruction_cop1.cpp  instruction_cop2.cpp  instruction_mmi.cpp  instruction_primary.cpp  instruction_regimm.cpp  instruction_secondary.cpp  instruction_tlb.cpp
src/core/gif/: gif.cpp  gif.h
src/core/gs/: context.cpp  context.h  gs.cpp  gs.h  page.h
src/core/iop/: cdvd.cpp  cdvd.h  context.cpp  context.h  cop0.cpp  cop0.h  cpu_core.cpp  cpu_core.h  cpu_regs.h  disassembler.cpp  disassembler.h  dmac.cpp  dmac.h  executor.h  instruction.h  intc.cpp  intc.h  interpreter.cpp  interpreter.h  interrupt_controller.cpp  interrupt_controller.h  sio2.cpp  sio2.h  timers.cpp  timers.h
src/core/iop/interpreter/: interpreter.cpp  interpreter.h
src/core/iop/interpreter/instructions/: instruction_cop0.cpp  instruction_primary.cpp  instruction_secondary.cpp
src/core/ipu/: ipu.cpp  ipu.h
src/core/memory/: memory.cpp  memory.h  memory_constants.h
src/core/sif/: sif.cpp  sif.h
src/core/spu/: spu.cpp  spu.h
src/core/vif/: vif.cpp  vif.h
src/core/vu/: vu.cpp  vu.h
src/frontend/: CMakeLists.txt  debugger.cpp  host_interface.cpp  host_interface.h  main.cpp
src/frontend/debugger/: ee.cpp  ee.h  iop.cpp  iop.h
src/frontend/imgui/: imfilebrowser.h
src/otterstation-imgui/: CMakeLists.txt  host_interface.cpp  host_interface.h
src/otterstation-imgui/debugger/: ee.cpp  ee.h  iop.cpp  iop.h
src/otterstation-qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/otterstation-qt/debugger/: debuggerwindow.cpp  debuggerwindow.h  registersmodel.cpp  registersmodel.h
src/platform_imgui/: CMakeLists.txt  host_interface.cpp  host_interface.h
src/platform_sdl/: CMakeLists.txt  host_interface.cpp  host_interface.h  main.cpp
